
add_executable(example example.cpp)
add_executable(raining raining.cpp)
add_executable(guessds guessds.cpp)
add_executable(snowflake snowflake.cpp)
add_executable(fences fences.cpp)
add_executable(applepie applepie.cpp)
add_executable(parpuz parpuz.cpp)
add_executable(23o5 23o5.cpp)
add_executable(order order.cpp)
add_executable(casting casting.cpp)
add_executable(recommend recommend.cpp)
add_executable(skiing2 skiing2.cpp)
add_executable(farida farida.cpp)
add_executable(planning planning.cpp)
add_executable(knapsack knapsack.cpp)
add_executable(coinchange coinchange.cpp)
