
add_executable(example example.cpp)
add_executable(raining raining.cpp)
add_executable(guessds guessds.cpp)
add_executable(snowflake snowflake.cpp)
add_executable(fences fences.cpp)
add_executable(applepie applepie.cpp)
add_executable(parpuz parpuz.cpp)
add_executable(23o5 23o5.cpp)
add_executable(order order.cpp)
add_executable(casting casting.cpp)
add_executable(recommend recommend.cpp)
add_executable(skiing2 skiing2.cpp)
add_executable(farida farida.cpp)
add_executable(planning planning.cpp)
add_executable(knapsack knapsack.cpp)
add_executable(coinchange coinchange.cpp)
add_executable(hedge hedge.cpp)
add_executable(reception reception.cpp)
add_executable(globbing globbing.cpp)
add_executable(palindrom palindrom.cpp)
add_executable(ip-lookup ip-lookup.cpp)
add_executable(vladimir vladimir.cpp)
add_executable(perseq perseq.cpp)
add_executable(frenzy frenzy.cpp)
add_executable(shoal shoal.cpp)
add_executable(party party.cpp)
add_executable(indiana indiana.cpp)
add_executable(tutel tutel.cpp)
add_executable(area50 area50.cpp)
add_executable(parcelparadox parcelparadox.cpp)

add_executable(boxing boxing.cpp)
add_executable(storerun storerun.cpp)
add_executable(icecream icecream.cpp)
